### Update 1.11-rc1 🎉 (September 22, 2024)

- Added support for likes and dislikes in window thumbnail, mini player and tray icon.
- Added ability to specify custom URL in 1 command line argument. Example: `C:\Program Files\YTMDPlayer>YTMDPlayer.exe https://music.youtube.com/watch?v=lYBUbBu4W08`.

### Update 1.10.3 🎉 (August 28, 2024)

- Fixed some bugs in track/playlist downloader.
- Now with any problematic video in the playlist there will be an error downloading the whole playlist.
- Removed checkbox to allow pytube (downloader) access to user proxy server.

### Update 1.10.2 🎉 (August 26, 2024)

- Fixed application crash related to clearing Discord RPC when Discord is already closed.
- Other minor fixes and improvements.

### Update 1.10.1 🎉 (August 21, 2024)

- Fixed display of some previews in the mini player.
- Fixed a bug that made it possible to open the mini-player on the playlist page.
- The settings window has a fixed size again.
- Added Placeholder Text to Host, Port, Login and Password fields in Application Proxy settings.
- Other minor fixes and improvements.

### Update 1.10 🎉 (August 10, 2024)

- Added ability to download tracks/playlists with custom proxy (Enabled by default). To disable it, go to settings > Web Engine > Allow pytube (downloader) access to proxy > uncheck the checkbox.
- Removed 30-second timeout for track/playlist downloader.

### Update 1.9 🎉 (August 9, 2024)

- Added the ability to change the type of the application's custom proxy server. Available types and their description:
  - HttpProxy - Used to transmit HTTP requests through a proxy.
  - Socks5Proxy - Supports transmission of all data types, including TCP and UDP.
  - Default - Sets the default proxy as specified in the system settings.
  - NoProxy - Disables the use of a proxy server.
- Added ability to specify login and password for custom proxy server.
- Fixed application crash when saving empty port of custom proxy server in settings.
