@@ -182,14 +182,26 @@
      </property>
      <item>
       <widget class="TransparentToolButton" name="dislike_button">
+       <property name="minimumSize">
+        <size>
+         <width>40</width>
+         <height>40</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>40</width>
+         <height>40</height>
+        </size>
+       </property>
        <property name="icon">
         <iconset>
          <normaloff>../../resources/icons/dislike.png</normaloff>../../resources/icons/dislike.png</iconset>
        </property>
        <property name="iconSize">
         <size>
-         <width>16</width>
-         <height>16</height>
+         <width>20</width>
+         <height>20</height>
         </size>
        </property>
        <property name="shortcut">
@@ -312,14 +324,26 @@
      </item>
      <item>
       <widget class="TransparentToolButton" name="like_button">
+       <property name="minimumSize">
+        <size>
+         <width>40</width>
+         <height>40</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>40</width>
+         <height>40</height>
+        </size>
+       </property>
        <property name="icon">
         <iconset>
          <normaloff>../../resources/icons/like.png</normaloff>../../resources/icons/like.png</iconset>
        </property>
        <property name="iconSize">
         <size>
-         <width>16</width>
-         <height>16</height>
+         <width>20</width>
+         <height>20</height>
         </size>
        </property>
        <property name="shortcut">
